# OSBasicAlgos

./: .gitignore  CMakeLists.txt  ProcessSchedulingAlgos.cpp
Deadlocks/: CMakeLists.txt
Deadlocks/lib/: banker.h
Demos/: CMakeLists.txt
Demos/bankerDemo/: CMakeLists.txt  main.cpp
Demos/diningPhilosophers/: CMakeLists.txt  main.cpp
Demos/fcfsProgram/: CMakeLists.txt  main.cpp
Demos/mainProgram/: CMakeLists.txt
Demos/sjfsProgram/: CMakeLists.txt  main.cpp
Monitors/: CMakeLists.txt
Monitors/lib/: monitor.h
ProcessSchAlgos/: CMakeLists.txt
ProcessSchAlgos/lib/: fcfs.h  sjfs.h
